ShowInvisibleColumnsForm: ensure selected columns are stored
If the user opens the organize columns form and clicks the + menu
without selecting a column first, the column is added but the table
preferences are not stored -> the column is not there anymore the next
time the preferences are loaded.

455004